Refactor the code related  to device connection
- Added property "App communicates using CoreBluetooth" to "Required background mode" so that device connection process can be maintained without packet loss if the app being switched to background.
- Running device connection in background thread and return after expiry

--- a/CS710iOSClient/Info.plist
+++ b/CS710iOSClient/Info.plist
@@ -19,7 +19,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleVersion</key>
-	<string>641</string>
+	<string>659</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSBluetoothAlwaysUsageDescription</key>
@@ -38,7 +38,7 @@
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
-		<string>bluetooth-peripheral</string>
+		<string>bluetooth-central</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
